[gd_scene load_steps=14 format=2]

[ext_resource path="res://terrain/medieval-city-assets/CitizenSheet.png" type="Texture" id=1]
[ext_resource path="res://ai/Human.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 1, 9, 20, 40 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 23, 9, 20, 40 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 45, 9, 20, 40 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 67, 9, 20, 40 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 89, 8, 20, 40 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 111, 8, 20, 40 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 133, 8, 20, 40 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 155, 8, 20, 40 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=11]
radius = 6.0

[node name="Human" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="RightDown" type="AnimatedSprite" parent="."]
position = Vector2( 0, -12 )
frames = SubResource( 5 )

[node name="RightUp" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 0, -12 )
frames = SubResource( 10 )
frame = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 11 )

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 15.0
target_desired_distance = 15.0
path_max_distance = 10.0
avoidance_enabled = true

[node name="AILabel" type="Label" parent="."]
margin_left = -60.0
margin_top = -52.0
margin_right = 60.0
margin_bottom = -38.0
align = 1

[connection signal="path_changed" from="NavigationAgent2D" to="." method="_on_NavigationAgent2D_path_changed"]
